# flat-bug-anon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run-tests.yml
docs/: flat-bug.ipynb
docs/source/: conf.py
scripts/experiments/: setup_for_experiment.md
scripts/experiments/slurm_config/: setup.txt
scripts/manuscript/experiment/: install_flatbug_ucloud.sh
scripts/manuscript/statistics/: dataset_table.R
src/flat_bug/: __init__.py
src/flat_bug/tests/: README.txt
